--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/resumen/resumen.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/resumen/resumen.component.html
@@ -334,7 +334,7 @@
                         <button type="button" id="miBoton2" (click)="descargarCotizacionComponent(1)" [disabled]="isLoading" class="btn btn-outline-info "><i class="fa-solid fa-file-pdf"></i> Propuesta Técnica</button>
                         <span style="margin-right: 10px;"></span>
                     </div>
-                    <div class="col-3 float-end col-md-3 d-none">
+                    <div class="col-3 float-end col-md-3">
                         <button type="button" id="miBoton3" (click)="modalContrato()" [disabled]="isLoading" class="btn btn-outline-primary"><i class="fa-solid fa-file-contract"></i> Contrato</button>
                         <span style="margin-right: 10px;"></span>
                     </div>
@@ -354,7 +354,108 @@
             </div>
         </div>
         <div class="tab-pane fade" id="prospecto" role="tabpanel" aria-labelledby="resumen-tab">
-            <pros-widget [idP]="model.idProspecto" (smEvent)="savePros($event)"></pros-widget>
+            <div class="row">
+                <div class="col-sm-12 col-md-4 mb-3">
+                    <div class="form-floating">
+                        <input type="text" class="form-control validacion-prospecto" [(ngModel)]="modelpros.nombreComercial" data-campo="nombreComercial" id="txtNombreComercial">
+                        <label for="txtNombreComercial">Nombre Comercial</label>
+                    </div>
+                    <span *ngIf="ferr('NombreComercial')" class="text-danger">{{ terr('NombreComercial') }}</span>
+                </div>
+                <div class="col-sm-12 col-md-4 mb-3">
+                    <div class="form-floating">
+                        <input type="text" class="form-control" [(ngModel)]="modelpros.razonSocial" id="txtRazonSocial">
+                        <label for="txtRazonSocial">Razón Social</label>
+                    </div>
+                    <span *ngIf="ferr('RazonSocial')" class="text-danger">{{ terr('RazonSocial') }}</span>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="form-floating">
+                        <input type="text" class="form-control validacion-prospecto" [(ngModel)]="modelpros.rfc" data-campo="rfc" id="txtRFC">
+                        <label for="txtRFC">RFC</label>
+                    </div>
+                    <span *ngIf="ferr('RFC')" class="text-danger">{{ terr('RFC') }}</span>
+                    <span *ngIf="ferr('RfcLenght')" class="text-danger">{{ terr('RfcLenght') }}</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-8 col-sm-12 mb-3">
+                    <div class="form-floating">
+                        <input type="text" class="form-control" [(ngModel)]="modelpros.domicilioFiscal" id="txtDomicicioFiscal">
+                        <label for="txtDomicicioFiscal">Domicilio Fiscal</label>
+                    </div>
+                    <span *ngIf="ferr('DomicilioFiscal')" class="text-danger">{{ terr('DomicilioFiscal') }}</span>
+                </div>
+                <div class="col-md-4 col-sm-12 mb-3">
+                    <div class="form-floating">
+                        <input type="text" class="form-control" [(ngModel)]="modelpros.nombreContacto" id="txtContacto">
+                        <label for="txtContacto">Contacto</label>
+                    </div>
+                    <span *ngIf="ferr('NombreContacto')" class="text-danger">{{ terr('NombreContacto') }}</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 col-sm-12 mb-3">
+                    <div class="form-floating">
+                        <input type="text" class="form-control" [(ngModel)]="modelpros.emailContacto" id="txtEmailContacto">
+                        <label for="txtEmailContacto">Email Contacto</label>
+                    </div>
+                    <span *ngIf="ferr('EmailContacto')" class="text-danger">{{ terr('EmailContacto') }}</span>
+                </div>
+                <div class="col-md-4 col-sm-12 col-6 mb-3">
+                    <div class="form-floating">
+                        <input type="text" class="form-control" [(ngModel)]="modelpros.numeroContacto" id="txtNumeroContacto">
+                        <label for="txtNumeroContacto">Tel. Contacto</label>
+                    </div>
+                    <span *ngIf="ferr('NumeroContacto')" class="text-danger">{{ terr('NumeroContacto') }}</span>
+                </div>
+                <div class="col-md-2 col-sm-12 col-6 mb-3">
+                    <div class="form-floating">
+                        <input type="text" class="form-control" [(ngModel)]="modelpros.extContacto" id="txtExtension">
+                        <label for="txtExtension">Extensión</label>
+                    </div>
+                    <span *ngIf="ferr('ExtContacto')" class="text-danger">{{ terr('ExtContacto') }}</span>
+                </div>
+            </div>
+            <h6><span class="small text-muted mb-2">Documentación</span></h6>
+            <div class="row">
+                <div class="col-sm-6 col-md-3 col-4" *ngFor="let d of docs">
+                    <div class="form-check">
+                        <label class="form-check-label">
+                            <input class="form-check-input" type="checkbox" id="d.nom" [value]="d.id" [(ngModel)]="d.act" /> {{ d.nom }}
+                        </label><br />
+                    </div>
+                </div>
+            </div>
+            <!--<br />
+    <h5>Poliza de cumplimiento</h5>
+    <br />
+    <div class="row">
+        <div class="col-sm-6 col-md-3 col-4">
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" type="radio" name="polizaCumplimiento" [value]="true" [(ngModel)]="model.polizaCumplimiento" required /> Si
+                </label><br />
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-3 col-4">
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" type="radio" name="polizaCumplimiento" [value]="false" [(ngModel)]="model.polizaCumplimiento" required /> No
+                </label><br />
+            </div>
+        </div>
+    </div>-->
+
+            <div class="row mb-3">
+                <div>
+                    <div class="btn-group float-end">
+                        <button type="button" (click)="guardaPros()" class="btn btn-outline-success" id="btnGuardarProspecto"><i class="fa-solid fa-save"></i> Guardar</button>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
         <div class="tab-pane fade" id="directorio" role="tabpanel" aria-labelledby="resumen-tab">
             <div class="row">
@@ -430,7 +531,6 @@
                 <div class="col-12 col-sm-12 col-md-12">
                     <div *ngIf="isLoadinglay" class="row-12 text-center">
                         <h6 *ngIf="isLoadinglay">Cargando Layout...</h6>
-                        <!--<h6 *ngIf="!isLoading">No se encontraron registros</h6>-->
                     </div>
                     <div *ngIf="isLoadinglay" class="text-center ">
                         <i class="fas fa-spinner fa-spin fa-2x"></i>
@@ -921,7 +1021,6 @@
     </div>
 </div>
 <pues-widget (smEvent)="savePlan($event)"></pues-widget>
-
 <direc-widget (smEvent)="saveDir($event)"></direc-widget>
 <pueslayout-widget (smEvent)="savePlan($event)"></pueslayout-widget>
 <mate-widget (smEvent)="newMate($event)"></mate-widget>
