--- a/SistemaVentasBatia/ClientApp/src/app/widgets/contrato/contrato.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/contrato/contrato.widget.html
@@ -279,7 +279,7 @@
                             <button type="button" (click)="guardaryGenerarContratoBase()" class="btn btn-outline-primary" [disabled]="isLoading"><i class="fa-solid fa-file-download"></i> Guardar y descargar contrato base</button>
                         </div>
                         <div class=" col-md-8 text-end">
-                            <button type="button" (click)="guardaryCargarContratoDeCliente()" class="btn btn-outline-success" [disabled]="isLoading" disabled><i class="fa-solid fa-file-arrow-up"></i> Guardar y cargar contrato de cliente</button>
+                            <button type="button" (click)="guardaryCargarContratoDeCliente()" class="btn btn-outline-success d-none" [disabled]="isLoading" disabled><i class="fa-solid fa-file-arrow-up"></i> Guardar y cargar contrato de cliente</button>
                             <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancelar</button>
                         </div>
                     </div>
