--- a/SistemaVentasBatia/ClientApp/src/app/widgets/editacotizacion/editacotizacion.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/editacotizacion/editacotizacion.widget.html
@@ -8,19 +8,14 @@
             <div class="modal-content">
                 <!-- Modal Header -->
                 <div class="modal-header">
-                    <h4 class="modal-title">Editar tipo de servicio</h4>
+                    <h4 class="modal-title">Editar cotización<small class="text-muted"> - Id: {{ idCotizacion }}</small></h4>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <!-- Modal body -->
                 <div class="modal-body">
                     <div>
                         <div class="row">
-                            <div class="col-md-12 col-12">
-                                <h6> Id cotización: {{ idCotizacion }}</h6>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12 col-md-12 col-12">
+                            <div class="col-sm-12 col-md-12 col-12 mb-3">
                                 <div class="form-floating">
                                     <select class="form-select" [(ngModel)]="idServicio" name="IdServicio" id="ddlServicioEdit">
                                         <option value="0">Seleccione...</option>
@@ -29,6 +24,23 @@
                                     <label for="ddlServicioEdit">Servicio</label>
                                 </div>
                                 <span *ngIf="ferr('IdServicio')" class="text-danger">{{ terr('IdServicio') }}</span>
+                            </div>
+                        </div>
+                        <h6><span class="small text-muted mb-2">Póliza de cumplimiento</span></h6>
+                        <div class="row">
+                            <div class="col-sm-6 col-md-3 col-4">
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="radio" name="polizaCumplimiento" [value]="true" [(ngModel)]="polizaCumplimiento" required /> Si
+                                    </label><br />
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-md-3 col-4">
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="radio" name="polizaCumplimiento" [value]="false" [(ngModel)]="polizaCumplimiento" required /> No
+                                    </label><br />
+                                </div>
                             </div>
                         </div>
                     </div>
