--- a/SistemaVentasBatia/ClientApp/src/app/widgets/prospecto/prospecto.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/prospecto/prospecto.widget.html
@@ -61,9 +61,7 @@
             <span *ngIf="ferr('ExtContacto')" class="text-danger">{{ terr('ExtContacto') }}</span>
         </div>
     </div>
-
-    <h5>Documentación</h5>
-    <br />
+    <h6><span class="small text-muted mb-2">Documentación</span></h6>
     <div class="row">
         <div class="col-sm-6 col-md-3 col-4" *ngFor="let d of docs">
             <div class="form-check">
@@ -73,7 +71,7 @@
             </div>
         </div>
     </div>
-    <br />
+    <!--<br />
     <h5>Poliza de cumplimiento</h5>
     <br />
     <div class="row">
@@ -91,7 +89,7 @@
                 </label><br />
             </div>
         </div>
-    </div>
+    </div>-->
 
     <div class="row mb-3">
         <div>
