--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/catalogo/catalogo.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/catalogo/catalogo.component.html
@@ -442,8 +442,8 @@
                                     </tr>
                                 </tbody>
                             </table>
-                            <div class="row text-end">
-                                <div class="col-12 col-md-12 col-sm-12 mt-2 align-content-end text-end">
+                            <div class="row text-end d-flex align-items-center">
+                                <div class="col-12 col-md-12 col-sm-12">
                                     <div>
                                         <button (click)="actualizarSalarios(sal.idPuesto)" class="btn  btn-outline-success"><i class="fa-solid fa-save"></i> Guardar</button>
                                     </div>
