--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/prospecto/nuevo/nuevo.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/prospecto/nuevo/nuevo.component.html
@@ -10,22 +10,22 @@
             <div class="row">
                 <div class="col-sm-12 col-md-4 mb-3">
                     <div class="form-floating">
-                        <input type="text" class="form-control validacion-prospecto" [(ngModel)]="pro.nombreComercial" data-campo="nombreComercial">
-                        <label asp-for="NombreComercial">Nombre Comercial</label>
+                        <input type="text" class="form-control validacion-prospecto" [(ngModel)]="pro.nombreComercial" data-campo="nombreComercial" id="txtProspectoNombre">
+                        <label for="txtProspectoNombre">Nombre Comercial</label>
                     </div>
                     <span *ngIf="ferr('NombreComercial')" class="text-danger">{{ terr('NombreComercial') }}</span>
                 </div>
                 <div class="col-sm-12 col-md-4 mb-3">
                     <div class="form-floating">
-                        <input type="text" class="form-control" [(ngModel)]="pro.razonSocial">
-                        <label asp-for="RazonSocial">Razón Social</label>
+                        <input type="text" class="form-control" [(ngModel)]="pro.razonSocial" id="txtProspectoRazonSocial">
+                        <label for="txtProspectoRazonSocial">Razón Social</label>
                     </div>
                     <span *ngIf="ferr('RazonSocial')" class="text-danger">{{ terr('RazonSocial') }}</span>
                 </div>
                 <div class="col-md-4 mb-3">
                     <div class="form-floating">
-                        <input type="text" class="form-control validacion-prospecto" [(ngModel)]="pro.rfc" data-campo="rfc">
-                        <label asp-for="Rfc">RFC</label>
+                        <input type="text" class="form-control validacion-prospecto" [(ngModel)]="pro.rfc" data-campo="rfc" id="txtProspectoRfc">
+                        <label for="txtProspectoRfc">RFC</label>
                     </div>
                     <span *ngIf="ferr('Rfc')" class="text-danger">{{ terr('Rfc') }}</span>
                 </div>
@@ -33,16 +33,16 @@
             <div class="row">
                 <div class="col-md-8 col-sm-12 mb-3">
                     <div class="form-floating">
-                        <input type="text" class="form-control" [(ngModel)]="pro.domicilioFiscal">
-                        <label asp-for="DomicilioFiscal">Domicilio Fiscal</label>
+                        <input type="text" class="form-control" [(ngModel)]="pro.domicilioFiscal" id="txtProspectoDomicilioFiscal">
+                        <label for="txtProspectoDomicilioFiscal">Domicilio Fiscal</label>
                     </div>
                     <span *ngIf="ferr('DomicilioFiscal')" class="text-danger">{{ terr('DomicilioFiscal') }}</span>
 
                 </div>
                 <div class="col-md-4 col-sm-12 mb-3">
                     <div class="form-floating">
-                        <input type="text" class="form-control" [(ngModel)]="pro.nombreContacto">
-                        <label asp-for="NombreContacto">Contacto</label>
+                        <input type="text" class="form-control" [(ngModel)]="pro.nombreContacto" id="txtProspectoContacto">
+                        <label for="txtProspectoContacto">Contacto</label>
                     </div>
                     <span *ngIf="ferr('NombreContacto')" class="text-danger">{{ terr('NombreContacto') }}</span>
                 </div>
@@ -50,98 +50,40 @@
             <div class="row">
                 <div class="col-md-4 col-sm-12 mb-3">
                     <div class="form-floating">
-                        <input type="text" class="form-control" [(ngModel)]="pro.emailContacto">
-                        <label asp-for="EmailContacto">Email Contacto</label>
+                        <input type="text" class="form-control" [(ngModel)]="pro.emailContacto" id="txtProspectoEmailContacto">
+                        <label for="txtProspectoEmailContacto">Email Contacto</label>
                     </div>
                     <span *ngIf="ferr('EmailContacto')" class="text-danger">{{ terr('EmailContacto') }}</span>
                 </div>
                 <div class="col-md-4 col-sm-12 mb-3">
                     <div class="form-floating">
-                        <input type="text" class="form-control" [(ngModel)]="pro.numeroContacto">
-                        <label asp-for="NumeroContacto">Tel. Contacto</label>
+                        <input type="text" class="form-control" [(ngModel)]="pro.numeroContacto" id="txtProspectoTelefonoContacto">
+                        <label for="txtProspectoTelefonoContacto">Tel. Contacto</label>
                     </div>
                     <span *ngIf="ferr('NumeroContacto')" class="text-danger">{{ terr('NumeroContacto') }}</span>
                 </div>
                 <div class="col-md-2 col-sm-12 mb-3">
                     <div class="form-floating">
-                        <input type="text" class="form-control" [(ngModel)]="pro.extContacto">
-                        <label asp-for="ExtContacto">Extensión</label>
+                        <input type="text" class="form-control" [(ngModel)]="pro.extContacto" id="txtProspectoContactoExt">
+                        <label for="txtProspectoContactoExt">Extensión</label>
                     </div>
                 </div>
             </div>
             <br />
             <h5>Documentación</h5>
             <br />
-            <div class="row">
-                <div class="col-sm-6 col-md-3" *ngFor="let d of docs">
-                    <!--<div class="form-check">
-                        <input class="form-check-input" type="checkbox" [(ngModel)]="d.act" [value]="d.id">
-                        <label class="form-check-label">
-                            {{ d.nom }}
-                        </label>
-                    </div>-->
-                    <div class="form-check">
-                        <label class="form-check-label">
-                            <input class="form-check-input" type="checkbox" id="d.nom" [value]="d.id" [(ngModel)]="d.act" /> {{ d.nom }}
-                        </label><br />
+            <div class="row col-12 mb-3">
+                <div class="d-flex align-items-center">
+                    <div class="col-md-3 col-sm-6 col-4" *ngFor="let d of docs">
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="checkbox" id="d.nom" [value]="d.id" [(ngModel)]="d.act" /> {{ d.nom }} 
+                            </label><br />
+                        </div>
                     </div>
-                </div>
-            </div>
-            <br />
-            <h5>Poliza de cumplimiento</h5>
-            <br />
-            <div class="row">
-                <div class="col-sm-6 col-md-3 col-4">
-                    <div class="form-check">
-                        <label class="form-check-label">
-                            <input class="form-check-input" type="radio" name="polizaCumplimiento" [value]="true" [(ngModel)]="pro.polizaCumplimiento" required /> Si
-                        </label><br />
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-3 col-4">
-                    <div class="form-check">
-                        <label class="form-check-label">
-                            <input class="form-check-input" type="radio" name="polizaCumplimiento" [value]="false" [(ngModel)]="pro.polizaCumplimiento" required /> No
-                        </label><br />
-                    </div>
-                </div>
-                <!--<span *ngIf="ferr('ListaTipoSalario')" class="text-danger">{{ terr('ListaTipoSalario') }}</span>-->
-            </div>
-            <div class="row mb-3">
-                <div>
-                    <div class="btn-group float-end">
-                        <button type="button" (click)="guarda()" class="btn btn-outline-success" id="btnGuardarProspecto"><i class="fa-solid fa-save"></i> Guardar</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br />
-        <div class="tab-pane fade" id="direccion" role="tabpanel">
-            <div class="row mb-3">
-                <div>
-                    <div class="btn-group float-end">
-                        <button type="button" class="btn btn-outline-primary" (click)="selDir(0)" id="btnAgregarDireccion">
-                            <i class="fa-solid fa-plus"></i> Nueva Dirección
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <br />
-            <div class="row">
-                <div *ngFor="let direccion of direcs.direcciones" class="col-sm-12 col-md-6 mb-2">
-                    <div class="card">
-                        <div class="card-header bg-light"><h6>{{ direccion.nombreSucursal }} ({{ direccion.tipoInmueble }})</h6></div>
-                        <div class="card-body">
-                            <div class="d-flex bd-highlight mb-3">
-                                <div class="bd-highlight">
-                                    {{ direccion.domicilioCompleto }}
-                                </div>
-                                <div class="ms-auto bd-highlight">
-                                    <a class="btn btn-sm text-primary mb-1" data-bs-toggle="tooltip" title="Editar" (click)="selDir(direccion.idDireccion)">
-                                        <i class="fa-solid fa-pencil fa-2x"></i>
-                                    </a>
-                                </div>
-                            </div>
+                    <div class="col-md-6 col-sm-6 col-4">
+                        <div class="float-end">
+                            <button type="button" (click)="guarda()" class="btn btn-outline-success" id="btnGuardarProspecto"><i class="fa-solid fa-save"></i> Guardar</button>
                         </div>
                     </div>
                 </div>
@@ -150,6 +92,3 @@
     </div>
 </div>
 <toast-widget></toast-widget>
-<!--<direc-widget (smEvent)="recEvent($event)"></direc-widget>-->
-<!--<toast-widget [events]="evenSub.asObservable()" [isError]="isErr" [message]="validaMess"></toast-widget>-->
-<!--<toast-widget [events]="evenSub.asObservable()" [isError]="isErr" [message]="errMessage"></toast-widget>-->
