--- a/SistemaVentasBatia/ClientApp/src/app/widgets/confirmacion/confirmacion.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/confirmacion/confirmacion.widget.html
@@ -3,12 +3,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div class="modal fade" id="modalEliminarOperario" data-bs-backdrop="static">
+    <div class="modal fade" id="modalConfirmacion" data-bs-backdrop="static">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <meta charset="UTF-8">
                 <!-- Modal Header -->
-                <div class="modal-header justify-content-center text-center">
+                <div class="modal-header justify-content-center">
                     <h4 class="modal-title">{{ titulo }}</h4>
                 </div>
                 <!-- Modal body -->
